[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "wgan"
description = "A Wasserstein GAN with gradient penalty in JAX"
authors = [{name = "Simon Dirmeier", email = "sfyrbnd@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.25",
    "ml-collections>=1.0.0",
    "optax>=0.2.4",
    "orbax>=0.1.9",    
    "flax>=0.8.0",
    "tensorflow>=2.18.0",
    "tensorflow-datasets>=4.9.7",
]
dynamic = ["version"]

[tool.setuptools]
packages = ["wgan"]

[tool.setuptools.dynamic]
version = {attr = "wgan.__init__.__version__"}

[tool.uv]
dev-dependencies = [
    "matplotlib>=3.10.0",
    "ml-collections>=1.0.0",
    "pre-commit>=4.0.1",
    "ruff>=0.8.3",
    "wandb>=0.19.1",
]

[tool.bandit]
skips = ["B101"]

[tool.ruff]
line-length = 80
exclude = ["*_test.py", "docs/**", "experiments/**"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F"]
extend-select = [
  "UP", "I", "PL", "S"
]
ignore = ["S301", "PLR0913", "S101", "PLR2004", "S603", "S607"]
