[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name =  "wgan"
description = "A Wasserstein GAN with gradient penalty in JAX"
authors = [{name = "Simon Dirmeier", email = "simd23@pm.me"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]
requires-python = ">=3.11"
dependencies = [
    "jax>=0.4.38",
    "ml-collections>=1.0.0",
    "optax>=0.2.4",
    "orbax>=0.1.9",
    "flax>=0.10.0",
]
dynamic = ["version"]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
    "wandb>=0.21.1",
]
examples = [
    "matplotlib>=3.10.5",
    "tensorflow>=2.17.0",
    "tensorflow-datasets>=4.9.6",
    "wandb>=0.21.1",
]

[tool.setuptools]
packages = ["wgan"]

[tool.setuptools.dynamic]
version = {attr = "wgan.__init__.__version__"}

[tool.ruff]
indent-width = 2
line-length = 80

[tool.ruff.lint.pydocstyle]
convention= 'google'
